--- a/src/plugins/weather/render/weather.html
+++ b/src/plugins/weather/render/weather.html
@@ -10,7 +10,7 @@
   {% endif %}
   <!-- Current Date -->
   <div class="header">
-    {% if title and title.strip() %}
+    {% if title != "hide" %}
     <div class="title">{{ title }}</div>
     {% endif %}
     <div class="current-date">{{ current_date }}</div>
