decreased forcast row; increase graph area

--- a/src/plugins/weather/render/weather.html
+++ b/src/plugins/weather/render/weather.html
@@ -233,7 +233,7 @@
     options: {
       layout: {
         padding: {
-          top: {% if plugin_settings.displayGraphIcons == "true" %}3{% else %}0{% endif %},
+          top: 30,
     bottom: {% if plugin_settings.displayGraphIcons == "true" %}11{% else %}0{% endif %}
     }
         },
